# OpenSwTeamProject

./: LICENSE.txt  README.md
BE/: BE Init.txt
BE/movie-api/: Dockerfile  docker-compose.yml  pyproject.toml
BE/movie-api/app/: database.py  deps.py  main.py  models.py  schemas.py  utils.py
BE/movie-api/app/routers/: movies.py  reviews.py  users.py
FE/Front/: package-lock.json
FE/Front/src/: App.css  App.jsx  index.css  main.jsx
FE/Front/src/Components/: Header.css  Header.jsx  ProtectedRoute.jsx
FE/Front/src/Components/MovieList/: MovieList.css  MovieList.jsx
FE/Front/src/Context/: UserContext.jsx
FE/Front/src/pages/: Home.jsx  Login.css  Login.jsx  MovieDetail.css  MovieDetail.jsx  MyPage.css  Mypage.jsx  SignUp.css  SignUp.jsx
